--- a/css/Dashboard.css
+++ b/css/Dashboard.css
@@ -538,5 +538,45 @@ header {
     padding: 20px;
     color: #999;
 }
+.splash-screen{
+    position: fixed;
+    z-index: 7;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: #ffffff;
+    transition: 1s;
+}
 
+.splash-screen h1{
+    font-size: 4rem;
+    font-family: 'Josefin Sans', sans-serif;
+}
 
+.splash-title{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: black;
+}
+
+.splash{
+    position: relative;
+    display: inline-block;
+    bottom: -20px;
+    opacity: 0;
+}
+
+.splash.active{
+    bottom: 0;
+    opacity: 1;
+    transition: ease-in-out 0.5s;
+}
+
+.splash.fade{
+    bottom: 150px;
+    opacity: 0;
+    transition: ease-in-out 0.5s;
+}
